@@ -7,14 +7,13 @@ import org.example.bot.processor.Add.*;
 import org.example.bot.processor.Del.*;
 import org.example.bot.processor.Edit.*;
 import org.example.bot.processor.MessageProcessor;
-import org.example.bot.processor.StopCommandProcessor;
+import org.example.bot.processor.Add.StopCommandProcessor;
 import org.example.bot.processor.View.ViewQuestionCommandProcessor;
 import org.example.bot.repository.QuestionRepository;
 import org.example.bot.repository.TestRepository;
 import org.example.bot.repository.UserRepository;
 import org.example.bot.repository.UserContextRepository;
 import org.example.bot.telegram.BotResponse;
-import org.example.bot.util.AnswerUtils;
 import org.example.bot.util.TestUtils;
 import org.example.bot.util.NumberUtils;
 import org.junit.jupiter.api.*;
@@ -64,11 +63,6 @@ public class QuestionProcessorTest {
     private final NumberUtils numberUtils = new NumberUtils();
 
     /**
-     * Утилита с вспомогательными методами для ответов
-     */
-    private final AnswerUtils answerUtils = new AnswerUtils();
-
-    /**
      * Утилита с вспомогательными методами для тестов
      */
     private final TestUtils testUtils = new TestUtils();
@@ -109,7 +103,7 @@ public class QuestionProcessorTest {
         AddQuestionTextProcessor addQuestionTextProcessor = new AddQuestionTextProcessor(stateService,
                 contextService, questionService);
         StopCommandProcessor stopCommandProcessor = new StopCommandProcessor(stateService,
-                contextService, answerUtils);
+                contextService);
         AddAnswerQuestionProcessor addAnswerQuestionProcessor = new AddAnswerQuestionProcessor(stateService,
                 contextService, questionService,
                 stopCommandProcessor);
@@ -165,13 +159,13 @@ public class QuestionProcessorTest {
     @BeforeEach
     void initEach() {
         UserContext session = new UserContext(userId);
-        TestEntity test1 = createTest(userId);
-        QuestionEntity question1 = createQuestion(test1);
+        TestEntity test1 = createTest(userId, 1L, "Математический тест");
+        QuestionEntity question1 = createQuestion(test1, 1L, "Сколько будет 2 + 2?");
 
         createAnswer(question1, "1", false);
         createAnswer(question1, "4", true);
 
-        UserEntity user = new UserEntity(List.of(test1));
+        UserEntity user = new UserEntity(Arrays.asList(test1));
         user.setUserId(userId);
         user.setContext(session);
 
@@ -191,23 +185,27 @@ public class QuestionProcessorTest {
      * Создает тест с заданными параметрами
      *
      * @param userId Идентификатор пользователя
+     * @param testId Идентификатор теста
+     * @param title  Название теста
      * @return созданный тест
      */
-    private TestEntity createTest(Long userId) {
-        TestEntity test = new TestEntity(userId, 1L);
-        test.setTitle("Математический тест");
+    private TestEntity createTest(Long userId, Long testId, String title) {
+        TestEntity test = new TestEntity(userId, testId);
+        test.setTitle(title);
         return test;
     }
 
     /**
      * Создает вопрос с заданными параметрами
      *
-     * @param test Тест для которого создается вопрос
+     * @param test       Тест для которого создается вопрос
+     * @param questionId Идентификатор вопроса
+     * @param title      Формулировка вопроса
      * @return созданный вопрос
      */
-    private QuestionEntity createQuestion(TestEntity test) {
-        QuestionEntity question = new QuestionEntity(test, 1L);
-        question.setQuestion("Сколько будет 2 + 2?");
+    private QuestionEntity createQuestion(TestEntity test, Long questionId, String title) {
+        QuestionEntity question = new QuestionEntity(test, questionId);
+        question.setQuestion(title);
         test.getQuestions().add(question);
         return question;
     }
@@ -218,13 +216,15 @@ public class QuestionProcessorTest {
      * @param question  Вопрос для которого создается ответ
      * @param title     Формулировка ответа
      * @param isCorrect Флаг правильности ответа
+     * @return созданный ответ
      */
-    private void createAnswer(QuestionEntity question, String title, boolean isCorrect) {
+    private AnswerEntity createAnswer(QuestionEntity question, String title, boolean isCorrect) {
         AnswerEntity answer = new AnswerEntity();
         answer.setAnswerText(title);
         answer.setCorrect(isCorrect);
         answer.setQuestion(question);
         question.getAnswers().add(answer);
+        return answer;
     }
 
     /**
@@ -233,7 +233,7 @@ public class QuestionProcessorTest {
     @Test
     void testAddQuestionWithoutId() {
         UserContext session = new UserContext(userId);
-        TestEntity test = createTest(userId);
+        TestEntity test = createTest(userId, 1L, "Математический тест");
         UserEntity user = new UserEntity(List.of(test));
         user.setUserId(userId);
         user.setContext(session);
@@ -311,7 +311,7 @@ public class QuestionProcessorTest {
     @Test
     void testAddQuestionWithId() {
         UserContext session = new UserContext(userId);
-        TestEntity test = createTest(userId);
+        TestEntity test = createTest(userId, 1L, "Математический тест");
         UserEntity user = new UserEntity(List.of(test));
         user.setUserId(userId);
         user.setContext(session);
@@ -441,8 +441,7 @@ public class QuestionProcessorTest {
     @Test
     void testEditQuestionTitle() {
         BotResponse response1 = messageHandler.handle("/edit_question 1", userId);
-        assertEquals("Вы выбрали вопрос “Сколько будет 2 + 2?”. " +
-                        "Что вы хотите изменить в вопросе?\n",
+        assertEquals("Вы выбрали вопрос “Сколько будет 2 + 2?”. Что вы хотите изменить в вопросе?",
                 response1.getMessage());
         assertNotNull(response1.getButtons());
         assertEquals(2, response1.getButtons().size());
@@ -468,7 +467,7 @@ public class QuestionProcessorTest {
     @Test
     void testEditAnswerText() {
         BotResponse response1 = messageHandler.handle("/edit_question 1", userId);
-        assertEquals("Вы выбрали вопрос “Сколько будет 2 + 2?”. Что вы хотите изменить в вопросе?\n", response1.getMessage());
+        assertEquals("Вы выбрали вопрос “Сколько будет 2 + 2?”. Что вы хотите изменить в вопросе?", response1.getMessage());
 
         BotResponse response2 = messageHandler.handle("EDIT_QUESTION 1 2", userId);
         assertEquals("Что вы хотите сделать с вариантом ответа?\n", response2.getMessage());
@@ -483,7 +482,8 @@ public class QuestionProcessorTest {
                 .save(argThat(savedQuestion ->
                         savedQuestion.getId().equals(1L) &&
                                 savedQuestion.getAnswers().stream()
-                                        .anyMatch(a -> Objects.equals(a.getAnswerText(), "2"))
+                                        .filter(a -> a.getAnswerText() == "2")
+                                        .findFirst().isPresent()
                 ));
     }
 
@@ -493,8 +493,7 @@ public class QuestionProcessorTest {
     @Test
     void testEditCorrectAnswer() {
         BotResponse response1 = messageHandler.handle("/edit_question 1", userId);
-        assertEquals("Вы выбрали вопрос “Сколько будет 2 + 2?”. " +
-                        "Что вы хотите изменить в вопросе?\n",
+        assertEquals("Вы выбрали вопрос “Сколько будет 2 + 2?”. Что вы хотите изменить в вопросе?",
                 response1.getMessage());
 
         BotResponse response2 = messageHandler.handle("EDIT_QUESTION 1 2", userId);
@@ -548,7 +547,7 @@ public class QuestionProcessorTest {
     @Test
     void testConfirmDeleteQuestionWithQuestionId() {
         UserContext session = new UserContext(userId);
-        TestEntity test = createTest(userId);
+        TestEntity test = createTest(userId, 1L, "Математический тест");
         UserEntity user = new UserEntity(List.of(test));
         user.setUserId(userId);
         user.setContext(session);
@@ -563,13 +562,13 @@ public class QuestionProcessorTest {
                         "будет удалён, вы уверены?",
                 response1.getMessage());
         assertNotNull(response1.getButtons());
-        assertEquals(2, response1.getButtons().getFirst().size());
+        assertEquals(2, response1.getButtons().size());
 
         InlineButtonDTO yesButton = response1.getButtons().getFirst().getFirst();
         assertEquals("Да", yesButton.text());
-        assertEquals("DEL_QUESTION_CONFIRM 1 YES", yesButton.callbackData());
+        assertEquals("DEL_QUESTION_CONFIRM 1 да", yesButton.callbackData());
 
-        BotResponse response2 = messageHandler.handle("DEL_QUESTION_CONFIRM 1 YES", userId);
+        BotResponse response2 = messageHandler.handle("DEL_QUESTION_CONFIRM 1 да", userId);
         assertEquals("Вопрос “Сколько будет 2 + 2?” " +
                         "из теста “Математический тест” удален.",
                 response2.getMessage());
@@ -594,13 +593,13 @@ public class QuestionProcessorTest {
                         "будет удалён, вы уверены?",
                 response1.getMessage());
         assertNotNull(response1.getButtons());
-        assertEquals(2, response1.getButtons().getFirst().size());
+        assertEquals(2, response1.getButtons().size());
 
-        InlineButtonDTO noButton = response1.getButtons().getFirst().getLast();
+        InlineButtonDTO noButton = response1.getButtons().get(1).getFirst();
         assertEquals("Нет", noButton.text());
-        assertEquals("DEL_QUESTION_CONFIRM 1 NO", noButton.callbackData());
+        assertEquals("DEL_QUESTION_CONFIRM 1 нет", noButton.callbackData());
 
-        BotResponse response2 = messageHandler.handle("DEL_QUESTION_CONFIRM 1 NO", userId);
+        BotResponse response2 = messageHandler.handle("DEL_QUESTION_CONFIRM 1 нет", userId);
         assertEquals("Вопрос “Сколько будет 2 + 2?” " +
                         "из теста “Математический тест” не удален.",
                 response2.getMessage());
@@ -620,13 +619,13 @@ public class QuestionProcessorTest {
         assertEquals("Вопрос “Сколько будет 2 + 2?” будет удалён, вы уверены?",
                 response2.getMessage());
         assertNotNull(response2.getButtons());
-        assertEquals(2, response2.getButtons().getFirst().size());
+        assertEquals(2, response2.getButtons().size());
 
         InlineButtonDTO yesButton = response2.getButtons().getFirst().getFirst();
         assertEquals("Да", yesButton.text());
-        assertEquals("DEL_QUESTION_CONFIRM 1 YES", yesButton.callbackData());
+        assertEquals("DEL_QUESTION_CONFIRM 1 да", yesButton.callbackData());
 
-        BotResponse response3 = messageHandler.handle("DEL_QUESTION_CONFIRM 1 YES", userId);
+        BotResponse response3 = messageHandler.handle("DEL_QUESTION_CONFIRM 1 да", userId);
         assertEquals("Вопрос “Сколько будет 2 + 2?” " +
                         "из теста “Математический тест” удален.",
                 response3.getMessage());
@@ -654,13 +653,13 @@ public class QuestionProcessorTest {
         assertEquals("Вопрос “Сколько будет 2 + 2?” будет удалён, вы уверены?",
                 response2.getMessage());
         assertNotNull(response2.getButtons());
-        assertEquals(2, response2.getButtons().getFirst().size());
+        assertEquals(2, response2.getButtons().size());
 
-        InlineButtonDTO noButton = response2.getButtons().getFirst().getLast();
+        InlineButtonDTO noButton = response2.getButtons().get(1).getFirst();
         assertEquals("Нет", noButton.text());
-        assertEquals("DEL_QUESTION_CONFIRM 1 NO", noButton.callbackData());
+        assertEquals("DEL_QUESTION_CONFIRM 1 нет", noButton.callbackData());
 
-        BotResponse response3 = messageHandler.handle("DEL_QUESTION_CONFIRM 1 NO", userId);
+        BotResponse response3 = messageHandler.handle("DEL_QUESTION_CONFIRM 1 нет", userId);
         assertEquals("Вопрос “Сколько будет 2 + 2?” " +
                         "из теста “Математический тест” не удален.",
                 response3.getMessage());
